fixed spacing issues and heading changes

--- a/src/About.css
+++ b/src/About.css
@@ -1,20 +1,21 @@
 .about-box {
     display: flex;
     position: relative;
-    top: 20vh;
+    top: 15vh;
     flex-direction: column;
     width: 80%;
-    height: 80%;
+    height: 55vh;
     margin: 0% 10%;
-    /* justify-content: space-evenly; */
+    justify-content: space-evenly;
     align-items: center;
+    /* background-color: red; */
     
 
 }
 
 .about-heading {
     display: flex;
-    /* height: 20%; */
+    height: 20%;
     width: 80%;
     color:  rgb(52,85,69);
     align-items: center;
@@ -23,13 +24,13 @@
     font-family: 'Red Hat Display', sans-serif;
     text-decoration: underline;
     font-weight: bold;
-    margin-bottom: 5%;
+    margin-top: 5%;
     /* background-color: white; */
 }
 
 .about-content {
     display: flex;
-    /* height: 50%; */
+    height: 40%;
     width: 80%;
     color: white;
     align-items: center;
@@ -37,19 +38,45 @@
     font-size: 24px;
     font-family: 'Red Hat Display', sans-serif;
     /* background-color: black; */
+   margin-top: 5%;
+}
+
+.difference-page-heading{
+    width: 80%;
+    height: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: rgb(52, 85, 69);
+   font-family: 'Red Hat Display', sans-serif;
+  /* background-color: white; */
+  /* height: 20%; */
+  font-size: 24px;
+  font-weight: bold;
+  margin-top: 5%;
 }
 @media screen and (min-width: 1000px) {
     .about-box {
         max-width: 790px;
     }
 }
+
 @media screen and (max-width: 660px) and (orientation: portrait) {
     .about-section {
         height: 90vh;
     }
-    .our-story {
-        height: 480;
+
+    .about-box {
+        height: 75vh;
     }
+        .about-heading {
+        font-size: 24px;
+    }
+
+    .about-content {
+        font-size: 20px;
+    }
+
 
     
 }
@@ -59,20 +86,24 @@
         height: 110vh;
     }
     .about-heading {
-        font-size: 24px;
+        font-size: 22px;
     }
 
     .about-content {
-        font-size: 20px;
+        font-size: 18px;
     }
-        .our-story {
-        height: 790;
+
+    .about-box {
+        height: 95vh;
     }
 
 }
 
-@media screen and (max-width: 320px) and (orientation: portrait) {
 
+@media screen and (max-width: 360px) and (orientation: portrait) {
+    .our-story {
+        height: 997.5vh;
+    }
         .about-heading {
         font-size: 20px;
     }
@@ -82,6 +113,33 @@
     }
 }
 
+@media screen and (max-width:900px)  and (orientation: landscape) {
+    .about-box {
+        height: 60vw;
+        top: 10vw;
+    }
+
+            .about-heading {
+        font-size: 22px;
+    }
+
+    .about-content {
+        font-size: 18px;
+    }
+}
+
+@media screen and (max-width:700px)  and (orientation: landscape) {
+    .about-box {
+        height: 75vw;
+    }
+        .about-heading {
+        font-size: 22px;
+    }
+
+    .about-content {
+        font-size: 18px;
+    }
+}
 
 
 
