--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,7 @@ section {
   width: 100%;
   height: 100vh; 
   scroll-snap-align: center;
-  background-image: url("./assets/home/homebackground.png");
+  /* background-image: url("./assets/home/homebackground.png"); */
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -81,7 +81,7 @@ section {
   /* justify-content: center; */
   text-align: center;
   width: 100%;
-  height: 110vh; 
+  height: 115vh; 
   scroll-snap-align: center;
   /* background-image: url("./assets/range/rangebackground.png"); */
   background-repeat: no-repeat;
@@ -103,7 +103,7 @@ section {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  background-color: rgb(52,85,69);
+  background-color: rgb(176 ,191, 184);
   color: white;
 }
 .contact {
@@ -123,7 +123,7 @@ section {
   color: white;
 }
 .our-story {
-height: 395vh;
+height: 397.5vh;
 width: 100%;
 }
 .about-section {
@@ -164,7 +164,7 @@ width: 100%;
   justify-content:flex-start;
   text-align: center;
   width: 100%;
-  height: 210vh; 
+  height: 212.5vh; 
   scroll-snap-align: center;
   /* background-image: url("./background.png"); */
   background-repeat: no-repeat;
@@ -227,7 +227,7 @@ nav {
 
 @media screen and (max-width: 850px) and (orientation: portrait) {
   .our-story {
-    height: 460vh;
+    height: 462.5vh;
      width: 100%;
   }
   .our-story-section {
@@ -240,31 +240,72 @@ nav {
 
 @media screen and (max-width: 700px) and (orientation: portrait) {
   .our-story {
-    height: 770vh;
+    height: 772.5vh;
      width: 100%;
   }
   .our-story-section-2 {
-    height: 530vh;
+    height: 532.5vh;
   }
 }
+@media screen and (max-width: 660px) and (orientation: portrait) {
+    .about-section {
+        height: 90vh;
+    }
+    .our-story {
+        height: 950vh;
+    }
+    .about-box {
+        height: 75vh;
+    }
+        .about-heading {
+        font-size: 24px;
+    }
+
+    .about-content {
+        font-size: 20px;
+    }
+
+
+    
+}
+
 
 @media screen and (max-width: 550px) and (orientation: portrait) {
   .our-story {
-    height: 965vh;
+    height: 847.5vh;
      width: 100%;
   }
   .our-story-section {
-    height: 320vh;
+    height: 220vh;
   }
 
   .our-story-section-2 {
-    height: 535vh;
+    height: 537.5vh;
   }
 
 
 }
 
+@media screen and (max-width: 520px) and (orientation: portrait) {
+    .about-section {
+        height: 110vh;
+    }
+    .about-heading {
+        font-size: 22px;
+    }
 
+    .about-content {
+        font-size: 18px;
+    }
+        .our-story {
+        height: 867.5vh;
+    }
+
+    .about-box {
+        height: 95vh;
+    }
+
+}
 
 
 @media screen and (max-width: 360px) and (orientation: portrait) {
@@ -274,15 +315,15 @@ nav {
     }
 
      .our-story {
-    height: 1035vh;
+    height: 997.5vh;
      width: 100%;
   }
   .our-story-section {
-    height: 320vh;
+    height: 280vh;
   }
 
   .our-story-section-2 {
-    height: 595vh;
+    height: 605vh;
   }
 }
 
