--- a/src/Contact.css
+++ b/src/Contact.css
@@ -191,7 +191,7 @@
     border-radius: 5px;
     font-family: 'Red Hat Display', sans-serif;
     padding: 2px;
-    text-transform: capitalize;
+
 }
 
 .contact-text-area-error {
